--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <link rel="icon" href="./img/favicon.ico">
 </head>
 <body>
-    <div class="warp">
         <header>
             <nav class="center">
                 <div class="navbar-mobile">
@@ -92,7 +91,9 @@
                     <div class="index-products">
                         <div class="product-carts-container1 index-products-list">
                             <div class="product-items">
-                                <div class="product-items-img items2"></div>
+                                <div class="index-product-items-img">
+                                    <img src="../img/p-2.png" alt="">
+                                </div>
                                 <div class="product-items-special">
                                     <div class="daliy">本日精選</div>
                                     <div class="material-symbols-outlined  favorite">favorite</div>
@@ -106,7 +107,9 @@
                                 </div>
                             </div>
                             <div class="product-items">
-                                <div class="product-items-img items5"></div>
+                                <div class="index-product-items-img">
+                                    <img src="../img/p-5.png" alt="">
+                                </div>
                                 <div class="product-items-special">
                                     <div class="daliy">本日精選</div>
                                     <div class="material-symbols-outlined favorite">favorite</div>
@@ -120,7 +123,9 @@
                                 </div>
                             </div>
                             <div class="product-items">
-                                <div class="product-items-img items7"></div>
+                                <div class="index-product-items-img">
+                                    <img src="../img/p-6.png" alt="">
+                                </div>
                                 <div class="product-items-special">
                                     <div class="daliy">本日精選</div>
                                     <div class="material-symbols-outlined favorite">favorite</div>
@@ -196,6 +201,5 @@
                 </div>
             </div>
         </footer>
-    </div>
 </body>
 </html>
