--- a/product.html
+++ b/product.html
@@ -63,7 +63,9 @@
                         <div class="product-carts"> 
                             <div class="product-carts-container1">
                                 <div class="product-items">
-                                    <div class="product-items-img"></div>
+                                    <div class="product-items-img">
+                                        <img src="../img/p-1.png" alt="">
+                                    </div>
                                     <div class="product-items-special">
                                         <div class="daliy">本日精選</div>
                                         <div class="material-symbols-outlined  favorite">favorite</div>
@@ -77,7 +79,9 @@
                                     </div>
                                 </div>
                                 <div class="product-items">
-                                    <div class="product-items-img items2"></div>
+                                    <div class="product-items-img">
+                                        <img src="../img/p-2.png" alt="">
+                                    </div>
                                     <div class="product-items-special">
                                         <div class="daliy">本日精選</div>
                                         <div class="material-symbols-outlined favorite">favorite</div>
@@ -93,7 +97,9 @@
                             </div>
                             <div class="product-carts-container2">
                                 <div class="product-items">
-                                    <div class="product-items-img items3"></div>
+                                    <div class="product-items-img">
+                                        <img src="../img/p-3.png" alt="">
+                                    </div>
                                     <div class="product-items-special">
                                         <div class="daliy">本日精選</div>
                                         <div class="material-symbols-outlined  favorite">favorite</div>
@@ -107,7 +113,9 @@
                                     </div>
                                 </div>
                                 <div class="product-items">
-                                    <div class="product-items-img items4"></div>
+                                    <div class="product-items-img">
+                                        <img src="../img/p-4.png" alt="">
+                                    </div>
                                     <div class="product-items-special">
                                         <div class="daliy">本日精選</div>
                                         <div class="material-symbols-outlined  favorite">favorite</div>
@@ -123,7 +131,9 @@
                             </div>
                             <div class="product-carts-container3">
                                 <div class="product-items">
-                                    <div class="product-items-img items5"></div>
+                                    <div class="product-items-img">
+                                        <img src="../img/p-5.png" alt="">
+                                    </div>
                                     <div class="product-items-special">
                                         <div class="daliy">本日精選</div>
                                         <div class="material-symbols-outlined  favorite">favorite</div>
@@ -137,7 +147,9 @@
                                     </div>
                                 </div>
                                 <div class="product-items">
-                                    <div class="product-items-img items6"></div>
+                                    <div class="product-items-img">
+                                        <img src="../img/p-6.png" alt="">
+                                    </div>
                                     <div class="product-items-special">
                                         <div class="daliy">本日精選</div>
                                         <div class="material-symbols-outlined  favorite">favorite</div>
@@ -153,7 +165,9 @@
                             </div>
                             <div class="product-carts-container4">
                                 <div class="product-items">
-                                    <div class="product-items-img"></div>
+                                    <div class="product-items-img">
+                                        <img src="../img/p-1.png" alt="">
+                                    </div>
                                     <div class="product-items-special">
                                         <div class="daliy">本日精選</div>
                                         <div class="material-symbols-outlined  favorite">favorite</div>
@@ -167,7 +181,9 @@
                                     </div>
                                 </div>
                                 <div class="product-items">
-                                    <div class="product-items-img items2"></div>
+                                    <div class="product-items-img">
+                                        <img src="../img/p-2.png" alt="">
+                                    </div>
                                     <div class="product-items-special">
                                         <div class="daliy">本日精選</div>
                                         <div class="material-symbols-outlined favorite">favorite</div>
@@ -182,7 +198,9 @@
 
                                 </div>
                                 <div class="product-items">
-                                    <div class="product-items-img items3"></div>
+                                    <div class="product-items-img">
+                                        <img src="../img/p-3.png" alt="">
+                                    </div>
                                     <div class="product-items-special">
                                         <div class="daliy">本日精選</div>
                                         <div class="material-symbols-outlined  favorite">favorite</div>
